frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
      name: frontend
spec:
  ingressClassName: "nginx"
  rules:
  - host: frontend.team23.k8s-ctf.com
    http:
      paths:
        - backend:
            serviceName: frontend
            servicePort: 8080
